--- a/example/prometheus-operator-crd/monitoring.coreos.com_prometheuses.yaml
+++ b/example/prometheus-operator-crd/monitoring.coreos.com_prometheuses.yaml
@@ -8247,8 +8247,7 @@ spec:
                   This flag is only available in versions of Prometheus >= 2.11.0.
                 type: boolean
               web:
-                description: WebSpec defines the web command line flags when starting
-                  Prometheus.
+                description: Defines the web command line flags when starting Prometheus.
                 properties:
                   pageTitle:
                     description: The prometheus web page title
