--- a/example/prometheus-operator-crd-full/monitoring.coreos.com_alertmanagers.yaml
+++ b/example/prometheus-operator-crd-full/monitoring.coreos.com_alertmanagers.yaml
@@ -1413,7 +1413,7 @@ spec:
                   as the Alertmanager object, which shall be mounted into the Alertmanager
                   Pods. Each ConfigMap is added to the StatefulSet definition as a
                   volume named `configmap-<configmap-name>`. The ConfigMaps are mounted
-                  into /etc/alertmanager/configmaps/<configmap-name> in the 'alertmanager'
+                  into `/etc/alertmanager/configmaps/<configmap-name>` in the 'alertmanager'
                   container.
                 items:
                   type: string
@@ -1421,7 +1421,7 @@ spec:
               configSecret:
                 description: "ConfigSecret is the name of a Kubernetes Secret in the
                   same namespace as the Alertmanager object, which contains the configuration
-                  for this Alertmanager instance. If empty, it defaults to 'alertmanager-<alertmanager-name>'.
+                  for this Alertmanager instance. If empty, it defaults to `alertmanager-<alertmanager-name>`.
                   \n The Alertmanager configuration should be available under the
                   `alertmanager.yaml` key. Additional keys from the original secret
                   are copied to the generated secret. \n If either the secret or the
@@ -4067,7 +4067,7 @@ spec:
                 description: Secrets is a list of Secrets in the same namespace as
                   the Alertmanager object, which shall be mounted into the Alertmanager
                   Pods. Each Secret is added to the StatefulSet definition as a volume
-                  named `secret-<secret-name>`. The Secrets are mounted into /etc/alertmanager/secrets/<secret-name>
+                  named `secret-<secret-name>`. The Secrets are mounted into `/etc/alertmanager/secrets/<secret-name>`
                   in the 'alertmanager' container.
                 items:
                   type: string
