--- a/example/prometheus-operator-crd-full/monitoring.coreos.com_alertmanagers.yaml
+++ b/example/prometheus-operator-crd-full/monitoring.coreos.com_alertmanagers.yaml
@@ -894,7 +894,7 @@ spec:
               alertmanagerConfigNamespaceMatcher:
                 default: true
                 description: If set to false namespace matchers will not be added
-                  to the routes.
+                  to the routes. Default is 'true'.
                 type: boolean
               alertmanagerConfigNamespaceSelector:
                 description: Namespaces to be selected for AlertmanagerConfig discovery.
